# location-tracker

./: .gitignore  CLAUDE.md  MIGRATION-GUIDE.md  README-GITHUB-MIGRATION.md  README-raw-gps-mode.md
backend/: .coverage  .coveragerc  .gitignore  README-refactoring.md  README.md  analyze_processor_results.py  coverage.xml  fix_existing_logs.py  gap_locations.jsonl  migrate_dev_to_prod.py  migrate_logs_dev_to_prod.py  output.json  package-lock.json  payload.txt  processor_test_results.jsonl  pyproject.toml  reprocess_gps_data.py  reprocess_single_file.py  requirements-all.txt  requirements-dev.txt  run_coverage.py  run_reprocess.py  serverless.yml  test-ci.txt  test_gap_locations.py  test_one_file.py  test_parameters.py  test_payload.json  test_payload.txt  test_processor_offline.py  test_query.sh  test_temporal_outlier_detection.py
backend/backend/: gap_locations.jsonl  test_processor_offline.py
backend/src/: coverage.xml
backend/src/handlers/: geocode_service.py  get_drivers_logs.py  get_dynamic_location_history.py  get_latest_location.py  get_location_history.py  get_raw_location_history.py  get_vehicle_ids.py  gps_processing.py  processor.py  save_drivers_log.py  scan_unsaved_sessions.py  test_drivers_logs.py
backend/src/handlers/charset_normalizer/: api.py  cd.py  constant.py  (+3 more)
backend/src/handlers/charset_normalizer-3.4.1.dist-info/: RECORD
backend/test/: test_drivers_logs.py  test_dynamodb_integration.py  test_error_handling.py  test_geocode_service_comprehensive.py  test_get_drivers_logs_comprehensive.py  test_get_dynamic_location_history.py  test_get_raw_location_history.py  test_gps_processing_comprehensive.py  test_processor.py  test_raw_history_endpoint.sh  test_save_drivers_log_comprehensive.py  test_scan_unsaved_sessions_comprehensive.py
backend/tests/: conftest.py  run_tests.sh  test_error_handling.py  test_geocode_service_comprehensive.py  test_get_drivers_logs_comprehensive.py  test_get_raw_location_history.py  test_gps_processing_comprehensive.py  test_scan_unsaved_sessions_comprehensive.py
backend/tests/integration/: test_drivers_logs.py  test_dynamodb_integration.py
backend/tests/unit/: test_geocode_service_comprehensive.py  test_get_drivers_logs_comprehensive.py  test_get_dynamic_location_history.py  test_gps_processing_comprehensive.py  test_save_drivers_log_comprehensive.py  test_scan_unsaved_sessions_comprehensive.py
(+88 files in other folders)
